eabz.uniswap-v2-indexer.500426bdd83ac845a25f264d664bfe5e6da71ab2
Running as unit: run-p1891257-i14471365.scope; invocation ID: efde50d8e9b64340a29bde94f7a398b8
   Compiling proc-macro2 v1.0.94
   Compiling unicode-ident v1.0.18
   Compiling serde_core v1.0.228
   Compiling serde v1.0.228
   Compiling libc v0.2.171
    Checking cfg-if v1.0.0
    Checking subtle v2.6.1
   Compiling version_check v0.9.5
   Compiling typenum v1.18.0
    Checking const-oid v0.9.6
    Checking itoa v1.0.15
   Compiling generic-array v0.14.7
   Compiling crunchy v0.2.3
   Compiling quote v1.0.40
   Compiling paste v1.0.15
   Compiling syn v2.0.100
   Compiling unicode-xid v0.2.6
   Compiling tiny-keccak v2.0.2
   Compiling ruint-macro v1.2.1
    Checking getrandom v0.2.15
   Compiling autocfg v1.4.0
    Checking rand_core v0.6.4
    Checking cpufeatures v0.2.17
    Checking base16ct v0.2.0
    Checking ff v0.13.1
    Checking pin-project-lite v0.2.16
    Checking group v0.13.0
    Checking foldhash v0.2.0
   Compiling shlex v1.3.0
   Compiling cc v1.2.17
    Checking once_cell v1.21.3
    Checking memchr v2.7.4
   Compiling heck v0.5.0
   Compiling winnow v0.7.4
   Compiling hashbrown v0.15.2
   Compiling strsim v0.11.1
   Compiling thiserror v2.0.12
   Compiling ident_case v1.0.1
   Compiling fnv v1.0.7
   Compiling equivalent v1.0.2
   Compiling lock_api v0.4.12
   Compiling indexmap v2.8.0
   Compiling ruint v1.17.0
   Compiling parking_lot_core v0.9.10
    Checking scopeguard v1.2.0
    Checking ryu v1.0.20
   Compiling serde_json v1.0.140
    Checking tracing-core v0.1.33
    Checking futures-core v0.3.31
   Compiling proc-macro-error-attr2 v2.0.0
   Compiling dunce v1.0.5
    Checking base64 v0.22.1
    Checking stable_deref_trait v1.2.0
    Checking futures-sink v0.3.31
   Compiling slab v0.4.9
    Checking signal-hook-registry v1.4.2
    Checking mio v1.0.3
    Checking socket2 v0.5.8
   Compiling blst v0.3.16
    Checking futures-channel v0.3.31
    Checking num_cpus v1.16.0
    Checking futures-io v0.3.31
    Checking litemap v0.7.5
    Checking pin-utils v0.1.0
    Checking futures-task v0.3.31
    Checking writeable v0.5.5
   Compiling icu_locid_transform_data v1.5.1
    Checking threadpool v1.8.1
   Compiling c-kzg v2.1.5
   Compiling icu_properties_data v1.5.1
    Checking crc-catalog v2.4.0
    Checking crc v3.2.1
   Compiling ring v0.17.14
   Compiling icu_normalizer_data v1.5.1
    Checking hex v0.4.3
    Checking rustls-pki-types v1.11.0
   Compiling zerocopy v0.8.24
    Checking untrusted v0.9.0
   Compiling httparse v1.10.1
   Compiling synstructure v0.13.1
   Compiling macro-string v0.1.4
   Compiling darling_core v0.20.11
   Compiling syn-solidity v1.4.0
   Compiling proc-macro-error2 v2.0.1
    Checking utf8_iter v1.0.4
    Checking write16 v1.0.0
    Checking utf16_iter v1.0.5
    Checking tower-service v0.3.3
    Checking log v0.4.27
    Checking percent-encoding v2.3.1
   Compiling rustls v0.23.25
    Checking form_urlencoded v1.2.1
   Compiling getrandom v0.3.2
    Checking sync_wrapper v1.0.2
    Checking futures-utils-wasm v0.1.0
    Checking tower-layer v0.3.3
   Compiling serde_derive v1.0.228
   Compiling zeroize_derive v1.4.2
   Compiling derive_more-impl v2.0.1
    Checking zeroize v1.8.1
    Checking der v0.7.9
    Checking crypto-common v0.1.6
    Checking block-buffer v0.10.4
    Checking digest v0.10.7
    Checking hmac v0.12.1
    Checking crypto-bigint v0.5.5
    Checking spki v0.7.3
    Checking pkcs8 v0.10.2
   Compiling alloy-rlp-derive v0.3.11
    Checking rfc6979 v0.4.0
    Checking signature v2.2.0
    Checking sha2 v0.10.8
   Compiling thiserror-impl v2.0.12
   Compiling tracing-attributes v0.1.28
   Compiling darling_macro v0.20.11
   Compiling zerofrom-derive v0.1.6
   Compiling darling v0.20.11
   Compiling auto_impl v1.2.1
    Checking tracing v0.1.41
   Compiling yoke-derive v0.7.5
    Checking derive_more v2.0.1
   Compiling zerovec-derive v0.10.3
    Checking bytes v1.10.1
    Checking smallvec v1.14.0
    Checking serdect v0.2.0
    Checking arrayvec v0.7.6
    Checking sec1 v0.7.3
    Checking const-hex v1.14.0
    Checking elliptic-curve v0.13.8
    Checking hashbrown v0.16.0
    Checking alloy-rlp v0.3.11
    Checking ecdsa v0.16.9
   Compiling alloy-sol-type-parser v1.4.0
    Checking parking_lot v0.12.3
    Checking zerofrom v0.1.6
    Checking k256 v0.13.4
   Compiling alloy-primitives v1.4.0
    Checking yoke v0.7.5
    Checking http v1.3.1
    Checking zerovec v0.10.4
   Compiling displaydoc v0.2.5
   Compiling tokio-macros v2.5.0
   Compiling alloy-json-abi v1.4.0
   Compiling futures-macro v0.3.31
   Compiling darling_core v0.21.3
    Checking tokio v1.44.1
    Checking tinystr v0.7.6
    Checking icu_locid v1.5.0
    Checking either v1.15.0
    Checking futures-util v0.3.31
   Compiling serde_with_macros v3.12.0
   Compiling alloy-sol-macro-input v1.4.0
   Compiling alloy-sol-macro-expander v1.4.0
   Compiling icu_provider_macros v1.5.0
    Checking serde_with v3.12.0
    Checking icu_provider v1.5.0
   Compiling darling_macro v0.21.3
    Checking icu_locid_transform v1.5.0
   Compiling darling v0.21.3
    Checking icu_collections v1.5.0
    Checking alloy-eip7702 v0.6.1
    Checking alloy-serde v1.0.38
    Checking alloy-eip2930 v0.2.1
    Checking alloy-eip2124 v0.2.0
    Checking nybbles v0.4.6
    Checking icu_properties v1.5.1
    Checking alloy-trie v0.9.1
   Compiling alloy-tx-macros v1.0.38
    Checking alloy-eips v1.0.38
    Checking ppv-lite86 v0.2.21
    Checking itertools v0.13.0
   Compiling alloy-sol-macro v1.4.0
    Checking icu_normalizer v1.5.0
    Checking rustls-webpki v0.103.1
    Checking foldhash v0.1.5
    Checking alloy-sol-types v1.4.0
    Checking allocator-api2 v0.2.21
    Checking alloy-consensus v1.0.38
    Checking idna_adapter v1.2.0
    Checking idna v1.0.3
    Checking url v2.5.4
    Checking tower v0.5.2
    Checking futures-executor v0.3.31
    Checking http-body v1.0.1
    Checking try-lock v0.2.5
    Checking rand_core v0.9.3
    Checking want v0.3.1
    Checking futures v0.3.31
    Checking hyper v1.6.0
    Checking tokio-util v0.7.14
    Checking rand_chacha v0.9.0
    Checking webpki-roots v0.26.8
   Compiling rustversion v1.0.20
    Checking tokio-stream v0.1.17
    Checking rand v0.9.0
    Checking alloy-consensus-any v1.0.38
    Checking alloy-network-primitives v1.0.38
    Checking hyper-util v0.1.10
    Checking sha1 v0.10.6
    Checking webpki-roots v1.0.3
   Compiling num-traits v0.2.19
    Checking utf-8 v0.7.6
    Checking bimap v0.6.3
    Checking data-encoding v2.8.0
    Checking http-body-util v0.1.3
    Checking serde_urlencoded v0.7.1
   Compiling pin-project-internal v1.1.10
   Compiling async-trait v0.1.88
    Checking rustls-pemfile v2.2.0
    Checking tokio-rustls v0.26.2
    Checking tungstenite v0.26.2
   Compiling doctest-file v1.0.0
    Checking hyper-rustls v0.27.7
    Checking mime v0.3.17
   Compiling crossbeam-utils v0.8.21
    Checking ipnet v2.11.0
    Checking tokio-tungstenite v0.26.2
    Checking interprocess v2.2.3
    Checking alloy-signer v1.0.38
    Checking reqwest v0.12.15
   Compiling strum_macros v0.27.1
    Checking pin-project v1.1.10
   Compiling toml_datetime v0.6.8
   Compiling serde_spanned v0.6.8
   Compiling num_enum_derive v0.7.3
   Compiling libm v0.2.11
    Checking num-integer v0.1.46
   Compiling toml_edit v0.22.24
    Checking alloy-rpc-types-debug v1.0.38
   Compiling async-stream-impl v0.3.6
   Compiling bigdecimal v0.4.7
    Checking num_enum v0.7.3
   Compiling pq-sys v0.7.1
    Checking utf8parse v0.2.2
    Checking hashbrown v0.14.5
    Checking anstyle-parse v0.2.7
   Compiling dsl_auto_type v0.1.3
    Checking async-stream v0.3.6
    Checking strum v0.27.1
    Checking alloy-chains v0.2.14
    Checking dashmap v6.1.0
    Checking num-bigint v0.4.6
    Checking lru v0.13.0
    Checking rand_chacha v0.3.1
    Checking scheduled-thread-pool v0.2.7
   Compiling diesel_table_macro_syntax v0.2.0
    Checking anstyle-query v1.1.3
    Checking is_terminal_polyfill v1.70.1
    Checking anstyle v1.0.13
    Checking colorchoice v1.0.4
   Compiling diesel_derives v2.2.4
    Checking anstream v0.6.21
    Checking r2d2 v0.8.10
   Compiling toml v0.8.20
    Checking rand v0.8.5
   Compiling migrations_internals v2.2.0
    Checking byteorder v1.5.0
    Checking bitflags v2.9.0
    Checking clap_lex v0.7.6
    Checking lazy_static v1.5.0
    Checking colored v2.2.0
    Checking clap_builder v4.5.49
   Compiling migrations_macros v2.2.0
   Compiling clap_derive v4.5.49
    Checking unsafe-libyaml v0.2.11
    Checking simple_logger v5.0.0
    Checking serde_yaml v0.9.34+deprecated
    Checking clap v4.5.49
    Checking diesel v2.2.8
    Checking alloy-json-rpc v1.0.38
    Checking alloy-rpc-types-eth v1.0.38
    Checking alloy-dyn-abi v1.4.0
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.2.8/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

    Checking alloy-transport v1.0.38
    Checking alloy-core v1.4.0
    Checking alloy-pubsub v1.0.38
    Checking alloy-transport-http v1.0.38
    Checking alloy-transport-ipc v1.0.38
    Checking alloy-transport-ws v1.0.38
    Checking alloy-rpc-client v1.0.38
    Checking alloy-rpc-types-any v1.0.38
    Checking alloy-rpc-types-trace v1.0.38
    Checking alloy-rpc-types-txpool v1.0.38
    Checking alloy-rpc-types-anvil v1.0.38
    Checking alloy-network v1.0.38
    Checking alloy-signer-local v1.0.38
    Checking alloy-provider v1.0.38
    Checking alloy-rpc-types v1.0.38
    Checking alloy-contract v1.0.38
    Checking alloy v1.0.38
For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
